--- a/style.css
+++ b/style.css
@@ -1,6 +1,15 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
-canvas {
-    background-color: gray;
+body {
+    background-color: black;
+}
+
+#canvas1 {
+    border: 3px solid gray;
     position: absolute;
     top: 50%;
     left: 50%;
