Ajout class Entity, World et GameEngine

--- a/style.css
+++ b/style.css
@@ -13,6 +13,18 @@ body {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%) scale(2);
+    image-rendering: -moz-crisp-edges;
+    image-rendering: -webkit-crisp-edges;
+    image-rendering: pixelated;
+    image-rendering: crisp-edges;
+}
+
+#background {
+    display: none;
+}
+
+#spritesheet {
+    display: none;
 }
 
