--- a/style.css
+++ b/style.css
@@ -5,18 +5,19 @@
 }
 
 body {
+    height: 100vh;
     background-color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #canvas1 {
-    border: 3px solid gray;
-    position: absolute;
-    width: 100%;
-    height: 100%;
     image-rendering: -moz-crisp-edges;
     image-rendering: -webkit-crisp-edges;
     image-rendering: pixelated;
     image-rendering: crisp-edges;
+    transform: scale(3);
 }
 
 
